--- a/templates/about.html
+++ b/templates/about.html
@@ -3,12 +3,9 @@
 
 {% block head %}
     {{ super() }}
-    <style type="text/css">
-        .important { color: #336699; }
-    </style>
     <script src="{{ url_for('static', filename='test.js') }}"></script>
 {% endblock %}
 
 {% block content %}
-    <div class="h3">The About page</div>
+    <div class="h3 important">The About page</div>
 {% endblock %}
