--- a/templates/about.html
+++ b/templates/about.html
@@ -11,4 +11,5 @@
 
 {% block content %}
     <div class="h3 important">The About page</div>
+    <span class="blink">Blinking text</span>
 {% endblock %}
