--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,10 +7,15 @@
         {% endblock %}
     </head>
     <body>
+        <div id="header">
+            {% block header %}
+            Header Content
+            {% endblock %}
+        </div>
         <div id="content">{% block content %}{% endblock %}</div>
         <div id="footer">
             {% block footer %}
-            &copy; Copyright 2024 by <a href="http://mimiron:5000/"> Justin Howe</a>
+            &copy; Copyright 2024 by <a href="http://mimiron:5000/">Justin Howe</a>
             {% endblock %}
         </div>
     </body>
