--- a/static/style.css
+++ b/static/style.css
@@ -7,25 +7,28 @@
     color: #336699;
 }
 
-#header {
-    display: block;
-    position: absolute;
-    top: 0%;
-    padding: 1rem;
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-#content {
-    display: flex;
+.content {
+    display: block;
     position: relative;
     top: auto;
+    padding: 0 1rem 1rem 1rem;
+}
+
+#header {
+    display: block;
     padding: 1rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    border-bottom: 5px solid #555;
 }
 
 #footer {
     display: block;
-    position: absolute;
     bottom: 0%;
     padding: 1rem;
 }
