--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Flask test app About page{% endblock %}
+{% block title %}Hello Flask Users{% endblock %}
 
 {% block head %}
     {{ super() }}
@@ -10,5 +10,5 @@
 {% endblock %}
 
 {% block content %}
-    <div class="h3 important">The About page</div>
+    <div class="h3 important">Flask test site - About page</div>
 {% endblock %}
