--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,9 @@
         <div class="container">
             <div id="header">
                 {% block header %}{% endblock %}
+                <a href="/">Home</a>
+                <a href="/about">About</a>
+                <a href="/test">Test Page</a>
             </div>
             <div class="content">
                 <h3 class="important">
