Fix copyright blurb

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
             </div>
             <div id="footer">
                 {% block footer %}
-                &copy; Copyright 2024 by <a href="http://mimiron:5000/">Justin Howe</a>
+                &copy; Copyright 2024 by Justin Howe
                 {% endblock %}
             </div>
         </div>
